--- a/src/WebUI/ClientApplication/src/styles/_components.scss
+++ b/src/WebUI/ClientApplication/src/styles/_components.scss
@@ -1,514 +1,87 @@
-//////////////////////////////////////
-///// AUTH-FORM
-.auth-form {
-    display: flex;
-    flex-direction: column;
-
-    &__heading {
-        position: relative;
-
-        &__icon {
-            @media only screen and (max-width: 600px) {
-                top: 2.2rem;
-                left: 2.5rem;
-            }
-
-            position: absolute;
-            height: 4.5rem;
-            width: 4.5rem;
-            top: 2.2rem;
-            left: 4.5rem;
-            fill: var(--color-grey-dark-1);
-        }
-
-        h1 {
-            padding-left: 4rem;
-            font-size: 3rem;
-            margin: 2rem 0;
-            color: var(--color-grey-dark-1);
-        }
-
-        h4 {
-            font-size: 2rem;
-        }
-    }
-
-    &__field {
-        display: flex;
-        position: relative;
-    }
-
-    &__icon {
-        height: 2rem;
-        width: 2rem;
-        position: absolute;
-        top: 2.7rem;
-        left: 1.5rem;
-        fill: var(--color-grey-dark-1);
-    }
-
-    &__input {
-        width: 100%;
-        border-radius: .5rem;
-        font-weight: 700;
-        font-size: 1.6rem;
-        padding: 2rem 3rem 2rem 5rem;
-        margin: 1rem 0;
-        background-color: var(--color-grey-dark-3);
-        color: var(--color-grey-dark-1);
-        border: none;
-
-        &::placeholder {
-            font-weight: 700;
-            color: var(--color-grey-dark-2);
-        }
-
-        &:focus {
-            outline: none;
-        }
-
-        &:focus + svg {
-            outline: none;
-            fill: var(--color-green);
-        }
-    }
-
-    &__button {
-        border-radius: .5rem;
-        font-size: 1.6rem;
-        padding: 2rem;
-        text-transform: uppercase;
-        background-color: var(--color-green);
-        border: none;
-        color: #fff;
-        font-weight: 700;
-        letter-spacing: .13rem;
-        margin-top: 2rem;
-
-        &:hover {
-            cursor: pointer;
-            background: var(--color-grey-dark-2);
-        }
-    }
-}
-
-/////////////////////////////////
-//////// AUTH BOTTOM TEXT
-.auth-bottom-text {
-    margin: 3rem 0 1rem 0;
-
-    &__link {
-        text-decoration: none;
-        color: var(--color-green-dark);
-        font-weight: 700;
-    }
-}
-
-/////////////////////////////////
-//////// INVALID Form
-.invalid {
-    color: red;
-    font-size: 1.3rem;
-    text-align: left;
-    margin: 1rem 0;
-}
-
-.is-invalid {
-    border: .1rem solid red;
-}
-
-//////////////////////////////////
-////// NAVBAR-MENU
-.navbar-menu {
-    padding: 4rem 0;
-    display: flex;
-    flex-direction: column;
+.select {
+    position: relative;
+    height: 47.5px;
+    background: white;
+    box-shadow: 0 3px 0 rgba(0,0,0,.05);
     
-
-    &__item {
-        list-style: none;
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      width: 0;
+      height: 0;
+      right: 10px;
+      bottom: 0;
+      margin: auto;
+      border-style: solid;
+      border-width: 5px 5px 0 5px;
+      border-color: #a52c2c transparent transparent transparent;
+      pointer-events: none;
     }
-
-    &__link {
-        display: block;
-        text-decoration: none;
-        color: #fff;
-        padding: 2rem 5.5rem;
-        font-size: 1.6rem;
-        font-weight: 600;
-        position: relative;
-
-        &:hover {
-            background-color: var(--color-blue-main-darker);
-        }
+    
+    &:before {
+      width: 30px;
+      position: absolute;
+      top: 1px;
+      right: 1px;
+      bottom: 1px;
+      background: whitesmoke;
+      content: '';
+      pointer-events: none;
     }
-
-    &__active {
-        background-color: var(--color-blue-main-darker);
-    }
-
-    &__icon {
-        position: absolute;
-        height: 2rem;
-        width: 2rem;
-        fill: #fff;
-        top: 2.3rem;
-        left: 2rem;
-    }
-}
-//////////////////////////////////
-////// NAVBAR-BRAND
-
-.navbar-brand {
-    padding: 1.5rem 2rem;
-    text-align: center;
-    background-color: var(--color-blue-main-darker);
-    position: relative;
-
-    &__title {
-        font-size: 2rem;
-        color: #fff;
-    }
-
-    &__icon {
-        position: absolute;
-        top: 1.8rem;
-        left: 2rem;
-        fill: #fff;
-        height: 2.5rem;
-        width: 2.5rem;
-    }
-}
-
-//////////////////////////
-///// TOP-INFO-USER
-.top-info-user {
-    display: flex;
-    flex-direction: row-reverse;
-    font-size: 1.6rem;
-    padding: 1.5rem 4rem;
-    background-color: #fff;
-    align-items: center;
-
+    
     &:hover {
-        cursor: pointer;
+      &:before {
+        background: #ffcfcf;
+      }
     }
-
-    &__image {
-        height: 3rem;
-        margin-left: 1.5rem;
-        border-radius: 50%;
+    
+    select {
+      font-size: 14px;
+      border: none;
+      box-shadow: none;
+      border-radius: 0;
+      background: transparent;
+      height: 100%;
+      width: 100%;
+      cursor: pointer;
+      outline: none;
+      padding-right: 35px;
+      padding-left: 15px;
+      border: 1px solid #a52c2c;
+  
+      // Disable default styling on ff
+      -moz-appearance: none;
+      
+      // Disable ugly ass outline on firefox 
+      &:-moz-focusring {
+        color: transparent;
+        text-shadow: 0 0 0 #000;
+      } 
+      
+      // Disable default styling on webkit browsers 
+      -webkit-appearance: none;
+      
+      // Disable default arrow on IE 11+
+      &::-ms-expand {
+        display: none;
+      }
+      
+      &:focus {  
+        border-color: #63ffb4;    
+      }
     }
-}
-
-///////////////////////////////////
-////// TIMER-PROJECT
-.timer-project {
-    display: flex;
-    align-items: center;
-    position: relative;
-
-    &__icon {
-        height: 2.2rem;
-        width: 2.2rem;
-        position: absolute;
-        top: .1rem;
-        left: -3.5rem;
-        fill: var(--color-grey-dark-1);
+  }
+  
+  // IE 9 only 
+  @media all and (min-width:0\0) and (min-resolution:.001dpcm){
+    .select{ 
+      select {
+        padding-right: 0;
+      }
+  
+      &:after, &:before {
+        display: none;
+      }
     }
-
-    &__text {
-        margin-right: 1.5rem;
-    }
-
-    &__select {
-        padding: .5rem;
-    }
-
-    &__choice {
-        p {
-            display: inline-block;
-        }
-    }
-
-    &__choosen {
-        svg {
-            height: 2.2rem;
-            width: 2.2rem;
-            position: absolute;
-            top: -.1rem;
-            left: -3.5rem;
-            fill: var(--color-grey-dark-1);
-        }
-    }
-}
-
-///////////////////////
-//// timer-time-info
-
-.timer-time-info {
-    display: flex;
-    align-items: center;
-    position: relative;
-
-    &__icon {
-        height: 2.2rem;
-        width: 2.2rem;
-        position: absolute;
-        top: .7rem;
-        left: -3rem;
-        fill: var(--color-grey-dark-1);
-    }
-
-    &__icon-trash {
-        height: 2.2rem;
-        width: 2.2rem;
-        position: absolute;
-        top: .7rem;
-        right: -4rem;
-        fill: rgb(231, 77, 77);
-
-        &:hover {
-            cursor: pointer;
-        }
-    }
-
-    &__time {
-        font-size: 2rem;
-        margin-right: 2rem;
-    }
-
-    &__btn {
-        margin-left: 2.5rem;
-        background: var(--color-green);
-        color: #fff;
-        padding: 1rem 2rem;
-        font-size: 1.4rem;
-        border: none;
-        font-weight: 600;
-
-        &:hover {
-            cursor: pointer;
-        }
-    }
-}
-
-/////////////////////////
-//////// PROJECT-HEADER
-.project-header {
-    font-size: 1.6rem;
-    font-weight: 400;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-
-    &__create-button {
-        margin-left: 3.5rem;
-        padding: 2rem 3rem;
-        background-color: var(--color-green);
-        color: #fff;
-        font-size: 1.6;
-        border-radius: .5rem;
-        font-weight: 600;
-        text-decoration: none;
-
-        &:hover {
-            background-color: var(--color-green-dark);
-        }
-    }
-}
-
-//////////////////
-////// PROJECT-ITEM
-.project-item {
-    &:hover {
-        cursor: pointer;
-    }
-}
-
-/////////////////////////
-//////// CREATE-FORM
-.create-form {
-    width: 100%;
-    font-size: 1.6rem;
-
-    &__input {
-        width: 100%;
-        font-size: 1.7rem;
-        padding: 1.5rem 2rem;
-    }
-
-    &__field {
-        margin: 1rem 0 3rem 0;
-    }
-
-    &__btn {
-        padding: 2rem 10rem;
-        background-color: var(--color-green);
-        color: #fff;
-        font-size: 1.6;
-        border-radius: .5rem;
-        font-weight: 600;
-        text-decoration: none;
-        border: none;
-
-        &:hover {
-            cursor: pointer;
-            background-color: var(--color-green-dark);
-        }
-    }
-
-    &__link {
-        display: block;
-        margin-top: 2rem;
-        text-decoration: none;
-        color: rgb(41, 41, 41);
-    }
-}
-
-///////////////////////////
-/////// PROJECT DETAIL
-.project-details {
-    font-size: 1.7rem;
-
-    &__description {
-        font-weight: bold;
-        font-size: 2.2rem
-    }
-
-    &__text {
-        margin-bottom: 3rem;
-    }
-
-    &__link {
-        text-decoration: none;
-        color: rgb(41, 41, 41);
-    }
-}
-
-///////////////////////////
-/////// CREATE-TASK-BUTTON
-.create-task-btn {
-    display: inline-block;
-    padding: 1rem 2rem;
-    color: #fff;
-    font-weight: 700;
-    margin-bottom: 3rem;
-    font-size: 1.5rem;
-    cursor: pointer;
-    text-decoration: none;
-    background: var(--color-green);
-    border-radius: .5rem;
-    margin: 0 2rem 0 0;
-
-    &:hover {
-        background: var(--color-green-dark);
-    }
-}
-
-
-///////////////////////////
-/////// TASK-CATEGORY
-.task-category {
-    flex: 0 0 30%;
-    box-shadow: var(--shadow-dark);
-    font-size: 1.6rem;
-    background: var(--color-grey-light);
-
-    &__heading {
-        padding: 2rem;
-        text-align: center;
-    }
-}
-
-///////////////////////
-//// Task-Item
-.task-item {
-    background: #fff;
-    margin: 1rem;
-    padding: 1.5rem;
-    text-align: center;
-    box-shadow: var(--shadow-light);
-
-    &__title {
-        margin-bottom: 1.5rem;
-    }
-
-    &__icons {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-    }
-
-    &__icon {
-        margin: 0 .5rem;
-        cursor: pointer;
-        height: 2rem;
-        width: 2rem;
-    }
-
-}
-
-////////////////////////////
-//////// CREATE-TASK-FORM
-.create-task-form {
-
-    &__heading {
-        font-size: 2rem;
-        margin-bottom: 2rem;
-    }
-
-    &__input {
-        padding: 1rem 2rem;
-        width: 100%;
-        font-size: 1.5rem;
-        margin-bottom: 2rem;
-    }
-
-    &__btn-close {
-        margin-left: 1.5rem;
-    }
-}
-
-
-////////////////////
-///// PROJECT-CHOICE
-.project-choice {
-    font-size: 1.6rem;
-
-    &__text {
-        font-size: 2rem;
-    }
-
-    &__select {
-        display: block;
-        margin: 2rem 0;
-        padding: 1.5rem 3rem;
-    }
-}
-
-.create-new-project-btn {
-    cursor: pointer;
-    margin: 1rem 0;
-}
-
-/////////////////
-///// CREATE-PROJECT
-.create-project-form {
-    &__heading {
-        font-size: 2rem;
-        margin-bottom: 2rem;
-    }
-
-    &__input {
-        padding: 1rem 2rem;
-        width: 100%;
-        font-size: 1.5rem;
-        margin-bottom: 2rem;
-    }
-
-    &__btn-close {
-        margin-left: 1.5rem;
-    }
-}
+  }
