--- a/src/WebUI/ClientApplication/src/styles.scss
+++ b/src/WebUI/ClientApplication/src/styles.scss
@@ -1,5 +1,5 @@
 @import "styles/base";
-@import "styles/animations";
+//@import "styles/animations";
 @import "styles/layout";
 @import "styles/components";
 @import "styles/shared";
