--- a/src/WebUI/ClientApplication/src/styles/_layout.scss
+++ b/src/WebUI/ClientApplication/src/styles/_layout.scss
@@ -1,123 +1,149 @@
-.wrapper {
+// AUTH 
+
+.auth-form {
+    width: 600px;
+    padding: 30px;
+    background-color: #fff;
 
 }
 
 .auth-wrapper {
-    @media only screen and (max-width: 600px) {
-        padding: 6rem 1.5rem;
-    }
-
-    background: rgb(55,150,131);
-    background: linear-gradient(79deg, rgba(55,150,131,1) 0%, rgba(142,228,175,1) 61%);
-    min-height: 100vh;
-    padding: 15rem 0;
-}
-
-.auth {
-    @media only screen and (max-width: 600px) {
-        width: 40rem;
-        padding: 1.5rem 3rem 1rem 3rem;
-        height: 55rem;
-    }
-
-    font-size: 1.4rem;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 50rem;
-    padding: 3rem 6rem 2rem 6rem;
-    text-align: center;
-    box-shadow: var(--shadow-dark);
-    border-radius: 1rem;
-    background: #fff;
-}
-
-//////////////////////
-///// HOME LAYOUT
-
-.home-wrapper {
+    background-image: url('/../assets/img/background.svg');
+    background-size: cover;
     height: 100vh;
+    padding-top: 70px;
 }
+
+// SIDE NAVIGATION
 
 .navbar {
-    position: fixed;
     height: 100%;
-    width: 250px;
-    background-color: var(--color-blue-main);
+    width: 230px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: var(--color-blue-dark);
+    overflow-x: hidden;
+}
+
+.navbar-menu {
+    display: flex;
+    flex-direction: column;
+    
+    &__item {
+        list-style: none;
+        &__icon {
+            position: absolute;
+            top: 5px;
+            left: 30px;
+        }
+    }
+
+    &__link {
+        display: block;
+        text-decoration: none;
+        color: #fff;
+        font-weight: 600;
+        position: relative;
+        padding-left: 70px;
+
+        &:hover {
+            background-color: var(--color-blue-darker);
+        }
+    }
+
+    &__active {
+        background-color: var(--color-blue-darker);
+    }
+}
+
+.navbar-brand {
+    text-align: center;
+    background-color: var(--color-blue-main-darker);
+    position: relative;
+    margin-bottom: 20px;
+
+    &__title {
+        font-size: 20px;
+        color: #fff;
+        margin: 20px;
+    }
+
+    &__icon {
+        position: absolute;
+        top: -15px;
+        left: 17px;
+    }
+}
+
+// TOP-INFO
+.top-info-user {
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 10px 20px;
+    background-color: #fff;
+    align-items: center;
+    padding: 16px 50px;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    &__image {
+        height: 30px;
+        margin-left: 10px;
+        border-radius: 50%;
+    }
 }
 
 .main-content {
-    padding-left: 250px;
-    height: 100%;
-    width: 100%;
+    margin-left: 230px;
+    height: 100vh;
+}
+
+.section {
+    margin: 0;
     background-color: var(--color-grey-background);
+    height: 100%;
+    padding: 40px;
+
+    &__title h1{
+        font-size: 40px;
+        margin: 0 0 40px 0;
+    }
 }
 
-.section-wrapper {
-    padding: 5rem;
+// PROJECT
+
+.project-table {
+    margin: 40px 0 0 0;
+
+    &__item {
+        cursor: pointer;
+    }
 }
 
-.timer {
-    background: #fff;
-    box-shadow: var(--shadow-dark);
-    padding: 2rem 8rem;
-    border-radius: .5rem;
-    font-size: 1.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.create-project-btn {
+    margin: 0 20px 0 0;
 }
 
-//////////////////////
-///// PROJECTS LAYOUT
+// TASKS
 
-.project-list {
-    margin-top: 3rem;
-    box-shadow: var(--shadow-dark);
-    border-radius: 1rem;
+.project-choice {
+    &__text {
+        margin: 20px 0;
+    }
+
+    &__btn {
+        margin: 20px 0;
+    }
 }
 
-.project-item {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    padding: 2rem;
-    font-size: 1.6rem;
-    border-bottom: 1px solid rgb(202, 202, 202);
-}
+.task-buttons {
+    margin: 0 0 20px 0;
 
-.project-list-heading {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    padding: 2rem;
-    font-size: 1.6rem;
-    margin-bottom: 1rem;
-}
-
-
-////////////////////////////////
-///// SHARED LAYOUT
-.section-header {
-    font-size: 1.6rem;
-    margin-bottom: 3rem;
-}
-
-////////////////////
-///// Tasks
-.tasks {
-    display: flex;
-    justify-content: space-between;
-    margin: 2rem 0;
-    align-items: start;
-    
-    &__current-text {
-        font-size: 1.7rem;
-        margin: 2rem 0;
+    &__btn {
+        margin: 0 0 0 20px;
     }
 }
